--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,5 +25,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Finnish literature -- History and criticism'
 - !lcc 'PH'
+- GITenberg
 title: Johdanto Suomen kirjallishistoriaan
 url: http://www.gutenberg.org/ebooks/15908
